=================
Changes for Crate
=================

Unreleased
==========

 - Fix: Filtering on a routing column sometimes didn't work if the value was an
   empty string

 - Fix: Bulk inserts with mixed but compatible types (e.g. int and long) failed

 - Fix: Force UTF8 encoding in file reading collector to avoid JVM's default encoding settings

 - Added support for the ``std_dev``, ``variance`` and ``geometric_mean``
   aggregation functions

 - Added support for the CURRENT_TIMESTAMP expression

 - Throw an error while using unknown column references in ``SELECT``
   statements while parent's policy is not of type ``ignored``

 - Added support for the datetime function ``extract (field from source)``

 - Fix: removed unsupported syntax from ``Update`` synposis

 - Support column referencing in ``Update`` statement assignment
   expression

 - Removed undocumented feature: It is no longer possible to use sys
   expressions in any context.

 - don’t allow full qualified names in UPDATE assignments, INSERT and
   INSERT INTO

 - The ``sys.operations`` table has now a ``_nodes`` system column
   which exposes information about the node the operation runs on.

2015/01/19 0.46.3
2015/01/19 0.45.7
=================

 - SELECT statements that involved tables from the information_schema schema or
   from the sys schema could fail if they contained columns in the ORDER BY
   clause but didn't contain these columns in the result column list.

 - Fix: Return zero row count instead of an exception if update by id
   doesn't match any document

 - Fixed an issue in the ``sys.shards`` table which caused an
   exception when the select limit was lower then the number of
   matching shards on a node.

 - Fixed type conversion of bulk parameters

 - Updated crate-admin to version 0.11.2 which includes following changes:

    - removed usage of sys expressions in wrong context

    - fixed a template rendering issue in cluster view in Safari
