@@ -553,6 +553,7 @@ public class GroupByAggregateTest extends SQLTransportIntegrationTest {
     @Test
     public void testGlobalAggregateOnNestedColumn() throws Exception {
         this.setup.groupBySetup();
+        waitNoPendingTasksOnAll();
         execute("select count(details['job']), min(details['job']), max(details['job']), count(distinct details['job']) from characters");
         assertEquals(1, response.rowCount());
         assertArrayEquals(new String[]{"count(details['job'])", "min(details['job'])", "max(details['job'])", "count(DISTINCT details['job'])"}, response.cols());
@@ -653,6 +654,24 @@ public class GroupByAggregateTest extends SQLTransportIntegrationTest {
         execute("select age from characters group by age having age > 40 order by age");
         assertEquals(2L, response.rowCount());
         assertEquals(43, response.rows()[0][0]);
+    }
+
+    @Test
+    public void testHavingOnSameAggregate() throws Exception {
+        this.setup.groupBySetup("integer");
+        execute("select avg(birthdate) from characters group by gender\n" +
+                "having avg(birthdate) = 181353600000.0");
+        assertThat(response.rowCount(), is(1L));
+        assertThat(TestingHelpers.printedTable(response.rows()), is("1.813536E11\n"));
+    }
+
+    @Test
+    public void testHavingOnOtherAggregate() throws Exception {
+        this.setup.groupBySetup("integer");
+        execute("select avg(birthdate) from characters group by gender\n" +
+                "having min(birthdate) > '1970-01-01'");
+        assertThat(response.rowCount(), is(1L));
+        assertThat(TestingHelpers.printedTable(response.rows()), is("1.813536E11\n"));
     }
 
 
@@ -848,10 +867,10 @@ public class GroupByAggregateTest extends SQLTransportIntegrationTest {
                 ") clustered by (url) with (number_of_replicas=0)");
         ensureGreen();
         execute("insert into twice (\"name\", \"url\", \"score\") values (?, ?, ?)",
-                    new Object[]{
-                            "A",
-                            "https://Ä.com",
-                            99.6d});
+                new Object[]{
+                        "A",
+                        "https://Ä.com",
+                        99.6d});
         refresh();
         execute("select avg(score), url, avg(score) from twice group by url limit 10");
         assertThat(TestingHelpers.printedTable(response.rows()), is("99.6| https://Ä.com| 99.6\n"));
@@ -990,9 +1009,9 @@ public class GroupByAggregateTest extends SQLTransportIntegrationTest {
         this.setup.groupBySetup("short");
         execute("select min(age), mean(age), geometric_mean(age), max(age), variance(age), stddev(age) from characters");
         assertThat((Short) response.rows()[0][0], is((short) 32));
-        assertThat((Double)response.rows()[0][1], is(55.25d));
+        assertThat((Double) response.rows()[0][1], is(55.25d));
 
-        assertThat((Double)response.rows()[0][2], closeTo(47.84415001097868d, 0.0000001));
+        assertThat((Double) response.rows()[0][2], closeTo(47.84415001097868d, 0.0000001));
         assertThat((Short)response.rows()[0][3], is((short)112));
         assertThat((Double)response.rows()[0][4], is(1090.6875d));
         assertThat((Double)response.rows()[0][5], is(33.025558284456d));
