@@ -5,6 +5,9 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Fix: group by queries with a having clause without the group key
+   being selected failed
+
  - Fix: Filtering on a routing column sometimes didn't work if the value was an
    empty string
 
